--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "nodemon": "^2.0.15"
-  }
+  },
+  "proxy":"https://wordle-plus-plus.herokuapp.com"
 }
